# public/swagger.yaml
@@ -105,75 +105,6 @@ components:
                 - profilePicture
             type: object
             additionalProperties: false
-        PostResponse:
-            properties:
-                pid:
-                    type: number
-                    format: double
-                    description: 'Post Response'
-                    example: 'title: abc, description: some description of a post'
-                title:
-                    type: string
-                description:
-                    type: string
-                likes:
-                    items:
-                        type: number
-                        format: double
-                    type: array
-                comments:
-                    items:
-                        type: string
-                    type: array
-            required:
-                - pid
-                - title
-                - description
-                - likes
-                - comments
-            type: object
-            additionalProperties: false
-        PostPayload:
-            properties:
-                title:
-                    type: string
-                    description: 'title of post'
-                    example: ""
-                description:
-                    type: string
-                    description: 'description of post'
-                    example: ""
-                postedBy:
-                    properties:
-                        profilePicture:
-                            type: string
-                        username:
-                            type: string
-                        userId:
-                            type: string
-                    required:
-                        - profilePicture
-                        - username
-                        - userId
-                    type: object
-                    description: postedBy
-                images:
-                    items:
-                        type: string
-                    type: array
-                    description: Image
-                    example: ""
-            required:
-                - title
-                - description
-                - postedBy
-            type: object
-            additionalProperties: false
-        FlattenMaps_T_:
-            properties: {}
-            type: object
-        PostDocument:
-            $ref: '#/components/schemas/FlattenMaps_T_'
     securitySchemes:
         bearerAuth:
             type: http
@@ -479,104 +410,6 @@ paths:
             security:
                 -
                     bearerAuth: []
-            parameters: []
-    /posts/createpost:
-        post:
-            operationId: CreatePost
-            responses:
-                '200':
-                    description: Ok
-                    content:
-                        application/json:
-                            schema:
-                                anyOf:
-                                    - {$ref: '#/components/schemas/PostResponse'}
-                                    - {type: string}
-            tags:
-                - Post
-            security: []
-            parameters: []
-            requestBody:
-                required: true
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/PostPayload'
-    /posts/like:
-        put:
-            operationId: LikePost
-            responses:
-                '200':
-                    description: Ok
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/PostResponse'
-            tags:
-                - Post
-            security: []
-            parameters: []
-            requestBody:
-                required: true
-                content:
-                    application/json:
-                        schema:
-                            properties:
-                                userId:
-                                    type: number
-                                    format: double
-                                pid:
-                                    type: number
-                                    format: double
-                            required:
-                                - userId
-                                - pid
-                            type: object
-    /posts/unlike:
-        put:
-            operationId: UnlikePost
-            responses:
-                '200':
-                    description: Ok
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/PostResponse'
-            tags:
-                - Post
-            security: []
-            parameters: []
-            requestBody:
-                required: true
-                content:
-                    application/json:
-                        schema:
-                            properties:
-                                userId:
-                                    type: number
-                                    format: double
-                                pid:
-                                    type: number
-                                    format: double
-                            required:
-                                - userId
-                                - pid
-                            type: object
-    /posts/getall:
-        get:
-            operationId: GetAllPosts
-            responses:
-                '200':
-                    description: Ok
-                    content:
-                        application/json:
-                            schema:
-                                items:
-                                    $ref: '#/components/schemas/PostDocument'
-                                type: array
-            tags:
-                - Post
-            security: []
             parameters: []
 servers:
     -
